Fixed bug with initial onShift not initialised correctly.

--- a/src/app/result-view/result-view.component.sass
+++ b/src/app/result-view/result-view.component.sass
@@ -21,14 +21,12 @@
     color: #cc6969
 table
     width: 100%
-    padding: 0 16px
     min-width: 450px
     align-items: center
 
 @media (max-width: 400px)
     table
         width: calc(100vw - 20px)
-        padding: 0px
         min-width: 200px
         overflow-x: scroll
         align-items: center
